--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for [@cocktail, @dose] do |f| %>
-  <%= f.input :decription %>
-  <%= f.input :ingredient_id, collection: @ingredients, prompt: "Ingrédients" %>
+  <%= f.input :description %>
+  <%= f.input :ingredient_id, collection: Ingredient.all, prompt: "Ingrédients" %>
   <%= f.button :submit %>
 <% end %>
