--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,7 +1,5 @@
-<%= form_for(@cocktail, html: { multipart: true }) do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  <%= f.label :picture %>
-  <%= f.file_field :picture %>
-  <%= f.submit "Add a cocktail" %>
+<%= simple_form_for(@cocktail, html: { multipart: true }) do |f| %>
+  <%= f.input :name %>
+  <%= f.input :picture %>
+  <%= f.button :submit %>
 <% end %>
